@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2012 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.2161 2012/02/02 21:33:12 des Exp $
+# $Id: CHANGES,v 1.2162 2012/02/02 22:26:45 des Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -10,6 +10,7 @@
 # --
 
 3.1.0.rc1 2012-02-??
+ - 2012-02-02 Fixed bug#7937 - HTMLUtils.pm ignore to much of e-mail source code.
  - 2012-02-02 Fixed bug#7972 - Some mails may not present HTML part when using rich viewing.
  - 2012-02-02 Fixed bug#8179 - DynamicField backend DateTime renders timestamps with seconds.
  - 2012-01-31 Fixed bug#8163 - Ticket / Article title can't be copied if value is too long.
